Add codestyle and fix formatting